# python-pubplot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
pubplot/: __init__.py  palette.py  pca.py  ridge.py  stacked_bar.py  umap.py  violin.py
