[project]
name = "pypubplot"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "ultraplot>=2.1.5",
]

[tool.setuptools.packages.find]
include = ["pubplot*"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "scanpy>=1.12",
]
